--- a/src/pages/assess/assess-talent.html
+++ b/src/pages/assess/assess-talent.html
@@ -5,25 +5,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- MAIN STYLES -->
+
   <link rel="stylesheet" href="/src/css/Homepage/main.css" />
-  <link rel="stylesheet" href="/src/css/Assess/career-site.css" />
   <link rel="stylesheet" href="/src/css/Assess/assess-main.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/slider.css" />
-  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
   <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
   <link rel="stylesheet" href="/src/css/Assess/responsive.css" />
+
+  <!-- JS AND CSS -->
+
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
   <!-- NEW STYLE -->
-
   <link rel="stylesheet" href="/src/components/global/global.css" />
-  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
+
+
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
   <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
   <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
+
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/molecules/request-demo/request-demo.css" />
+  <link rel="stylesheet" href="/src/components/molecules/connect-top/connect-top.css" />
+  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
+  <link rel="stylesheet" href="/src/components/organisms/customer-think/customer-think.css" />
+  <link rel="stylesheet" href="/src/components/molecules/tips/tips.css" />
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
+  <link rel="stylesheet" href="/src/components/molecules/careerSite/careerSite.css" />
+  <link rel="stylesheet" href="/src/components/molecules/engage/engage.css" />
 
   <title>Assess</title>
 </head>
