--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -6,12 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- MAIN STYLES -->
 
   <link rel="stylesheet" href="/src/css/Homepage/main.css" />
   <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+
+  <!-- JS AND CSS -->
+
+
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script
+    src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2fe50a07ea_suction%20lottie.json"></script>
 
 
   <!-- NEW CSS PART -->
@@ -21,11 +28,11 @@
   <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
   <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
   <link rel="stylesheet" href="/src/components/molecules/colorballs/balls.css" />
-
   <link rel="stylesheet" href="/src/components/molecules/stryve-stats/stryve-stats.css" />
 
-
+  <!-- SAME COMPONENETS AND SAME CSS -->
 
   <link rel="stylesheet" href="/src/components/organisms/slider/slider.css" />
   <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
@@ -35,8 +42,6 @@
   <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
 
 
-  <script
-    src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2fe50a07ea_suction%20lottie.json"></script>
 
   <title>Stryve</title>
 </head>
@@ -2394,8 +2399,6 @@
           </div>
         </div>
       </div>
-
-
 
 
 
