--- a/src/pages/resources/resource.html
+++ b/src/pages/resources/resource.html
@@ -5,11 +5,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/resources/resource.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
-  <link rel="stylesheet" href="css/save-time/responsive.css" />
+
+  <!-- MAIN STYLES -->
+
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/resources/resource.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="/src/css/save-time/responsive.css" />
+
+  <!-- JS AND CSS -->
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
+  <!-- NEW STYLES -->
+
+  <link rel="stylesheet" href="/src/components/global/global.css" />
+
+  <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
+
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
+
+
+
   <title>Resources</title>
 </head>
 
@@ -818,7 +842,8 @@
                     <div class="c-card__info-txt mrg-left">mins</div>
                   </div>
                   <h4>Stryve gain full B Corp Certification</h4>
-                  <p>We’re excited to announce that Stryve has become the first applicant tracking system to become a
+                  <p style="color: black;">We're excited to announce that Stryve has become the first applicant tracking
+                    system to become a
                     Certified B Corporation!</p><a href="/learning/stryve-gain-full-b-corp-certification"
                     class="c-btn cc-with-icon cc-link w-inline-block">
                     <div>Read it</div><img
@@ -844,7 +869,8 @@
                     <div class="c-card__info-txt mrg-left">mins</div>
                   </div>
                   <h4>The Best Applicant Tracking System for UK Businesses: 10 Features to Look For</h4>
-                  <p>Finding the right ATS for your business can lead you down a rabbit hole. Our latest blog looks at
+                  <p style="color: black;">Finding the right ATS for your business can lead you down a rabbit hole. Our
+                    latest blog looks at
                     some of the key features you should look for when partnering up with a new applicant tracking
                     system.</p><a
                     href="/learning/the-best-applicant-tracking-system-for-uk-businesses-10-features-to-look-for"
