--- a/src/pages/userguide/userGuide.html
+++ b/src/pages/userguide/userGuide.html
@@ -5,10 +5,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/userGuide/userguide.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
+
+  <!-- MAIN STYLES -->
+
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/userGuide/userguide.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+
+  <!-- JS AND CSS -->
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <!-- NEW STYLES -->
+  <link rel="stylesheet" href="/src/components/global/global.css" />
+
+  <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
+
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
+  <link rel="stylesheet" href="/src/components/molecules/strat-build/start-build.css" />
+
   <title>User-Guide</title>
 </head>
 
