--- a/src/pages/bookademo/bookdemo.html
+++ b/src/pages/bookademo/bookdemo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="lang-en hs-messages-mobile">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bookdemo/bookdemo.css" />
+  <link rel="stylesheet" href="/src/css/bookdemo/bookdemo.css" />
 
   <title>Book a demo</title>
 </head>
