--- a/src/pages/raiseTicket/raiseTicket.html
+++ b/src/pages/raiseTicket/raiseTicket.html
@@ -5,10 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/Homepage/footer.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
-  <link rel="stylesheet" href="css/raiseTicket/raiseTicket.css" />
+
+  <!-- MAIN STYLE -->
+
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/footer.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="/src/css/raiseTicket/raiseTicket.css" />
+
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/global/global.css" />
+
+  <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
+
   <title>Raise Ticket</title>
 </head>
 
