--- a/src/pages/remain/remain.html
+++ b/src/pages/remain/remain.html
@@ -5,23 +5,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- MAIN STYLES -->
+
   <link rel="stylesheet" href="/src/css/Homepage/main.css" />
-  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
   <link rel="stylesheet" href="/src/css/simplify/automate.css" />
   <link rel="stylesheet" href="/src/css/remain/full-remain.css" />
-  <link rel="stylesheet" href="/src/css/remain/header.css" />
   <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
   <link rel="stylesheet" href="/src/css/save-time/responsive.css" />
+
+  <!-- JS AND CSS -->
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
-  <!-- NEW STYLES -->
+  <!-- NEW STYLE -->
 
   <link rel="stylesheet" href="/src/components/global/global.css" />
-  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
-  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
-  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+
+
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/color/color.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
+
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/molecules/careerSite/careerSite.css" />
+  <link rel="stylesheet" href="/src/components/molecules/engage/engage.css" />
+  <link rel="stylesheet" href="/src/components/molecules/request-demo/request-demo.css" />
+  <link rel="stylesheet" href="/src/components/molecules/connect-top/connect-top.css" />
+  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
+  <link rel="stylesheet" href="/src/components/molecules/strat-build/start-build.css" />
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
 
 
 
