--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="css/signup/signup.css" /> -->
   <link rel="stylesheet" href="/src/pages/signup/signup-page.css" />
   <link rel="stylesheet" href="/src/components/organisms/signup/signup.css" />
+  <!-- <link rel="stylesheet" href="/src/components/global/global.css" /> -->
   <title>Register</title>
 </head>
 
