change the code for some webkits.

--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -58,7 +58,7 @@
       <a href="/src/pages/homepage/index.html" class="brand w-nav-brand w--current">
         <div class="html-embed-3 w-embed">
 
-          <svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none" xmlns="http://www.w3.org/2000/svg"
+          <svg id="logo-svg" width="102" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"
             class=" drawsvg-initialized">
 
             <path
@@ -87,15 +87,6 @@
           </svg>
 
         </div>
-
-        <img src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf45f80a06c5_Frame.svg"
-          alt="logo" class="c-logo__svg cc-hide">
-
-        <div class="cc-hide w-embed"></div>
-        <div class="html-embed-3 w-embed">
-          <svg width="102" height="31" viewbox="0 0 102 31" xmls="http://www.w3.org/2000/svg"
-            class="drawsvg-initialized"></svg>
-        </div>
       </a>
 
       <!-- NAVIGATION BAR -->
@@ -109,7 +100,7 @@
 
           <nav class="flex-menu solution w-dropdown-list"
             style="display: none; opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-            id="open-why" aria-labelledby="w-dropdown-toggle-0">
+            id="open-why">
             <div class="c-nav-drop__left-item cc-12" style="background-color: orange;">
 
               <img loading="lazy"
